Fix for button alignment on create project page. refs #120

--- a/raspberryio/static/less/site.less
+++ b/raspberryio/static/less/site.less
@@ -933,6 +933,19 @@ body#project-detail {
 	}
 }
 
+/* Project create/edit
+========================= */
+body#project-create-edit {
+	form {
+		input[type="submit"], input[type="cancel"] {
+			@media (max-width: 480px) {
+				display: block;
+				margin: 10px 0;
+			}
+		}
+	}
+}
+
 /* Project step create/edit
 ========================= */
 body#project-step-create-edit {
